--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,102 @@
+/*SASS Button */
+@import url(https://fonts.googleapis.com/css?family=Lato:700);
+html, body {
+  font-family: "Lato", sans-serif;
+  background: url(https://c.wallhere.com/photos/bc/c5/Pok_mon_video_games_pixel_art_pixels-1361965.jpg!d);
+  text-align: center;
+  height: 100%;
+}
+
+.container {
+  text-align: center;
+  position: absolute;
+  margin-top: -80px;
+  width: 100%;
+  top: 50%;
+}
+
+.toggle {
+  margin: 4px;
+  display: inline-block;
+  /*box-shadow: inset 0 0 35px 5px rgba(0, 0, 0, 0.25), inset 0 2px 1px 1px rgba(255, 255, 255, 0.9), inset 0 -2px 1px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  background: #ccd0d4;*/
+  position: relative;
+  height: 140px;
+  width: 140px;
+}
+.toggle:before {
+  /*box-shadow: 0 0 17.5px 8.75px #fff;
+  border-radius: 118.3px;
+  background: #fff;*/
+  position: absolute;
+  margin-left: -50.4px;
+  margin-top: -50.4px;
+  opacity: 0.2;
+  content: "";
+  height: 100.8px;
+  width: 100.8px;
+  left: 50%;
+  top: 50%;
+}
+.toggle .button {
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  filter: blur(1px);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.5), inset 0 -3px 4px -1px rgba(0, 0, 0, 0.2), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 3px 4px -1px rgba(255, 255, 255, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.8), inset 0 20px 30px 0 rgba(255, 255, 255, 0.2);
+  border-radius: 96.32px;
+  position: absolute;
+  background: #ccd0d4;
+  margin-left: -48.16px;
+  margin-top: -48.16px;
+  display: block;
+  height: 96.32px;
+  width: 96.32px;
+  left: 50%;
+  top: 50%;
+}
+.toggle .label {
+  transition: color 300ms ease-out;
+  text-shadow: 1px 1px 3px #ccd0d4, 0 0 0 rgba(0, 0, 0, 0.8), 1px 1px 4px #fff;
+  line-height: 139px;
+  text-align: center;
+  position: absolute;
+  font-weight: 700;
+  font-size: 30px;
+  display: block;
+  opacity: 0.9;
+  height: 100%;
+  width: 100%;
+  color: rgba(0, 0, 0, 0.4);
+}
+.toggle input {
+  opacity: 0;
+  position: absolute;
+  cursor: pointer;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+.toggle input:active ~ .button {
+  box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 30px 1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 25px 0 rgba(0, 0, 0, 0.4), inset 0 0 10px 1px rgba(255, 255, 255, 0.6);
+}
+.toggle input:active ~ .label {
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.45);
+}
+.toggle input:checked ~ .button {
+  box-shadow: 0 15px 25px -4px rgba(0, 0, 0, 0.4), inset 0 -8px 25px -1px rgba(255, 255, 255, 0.9), 0 -10px 15px -1px rgba(255, 255, 255, 0.6), inset 0 8px 20px 0 rgba(0, 0, 0, 0.2), inset 0 0 5px 1px rgba(255, 255, 255, 0.6);
+}
+.toggle input:checked ~ .label {
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+/*SASS Button End*/
+
 * {
     box-sizing: border-box;
 }
@@ -5,7 +104,6 @@
 body {
     font-family: helvetica, arial, sans-serif;
     font-size: 16px;
-    margin: 25px;
 }
 
 main {
@@ -44,15 +142,15 @@ footer a {
 }
 
 .pet {
-    background-color: rgb(235, 235, 235);
-    border: 0.75rem solid rgb(25, 25, 25);
-    border-radius: 1rem;
+    box-shadow: inset 0 0 35px 5px rgba(0, 0, 0, 0.25), inset 0 5px 5px 2px rgba(255, 255, 255, 0.9), inset 0 -2px 1px 0 rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    background: #d73f3f;
     display: inline-flex;
     flex-flow: column;
     justify-content: center;
+    width: 40rem;
     align-items: center;
-    max-width: 18rem;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .pet > * {
@@ -62,8 +160,19 @@ footer a {
 
 .pet-image-container {
     position: relative;
+    
+    background-color: rgb(255, 255, 255);
+    
 }
 
+.pet-screen{
+    background-color: #000;
+    padding: 1rem;
+    padding-inline: 5rem;
+    border-radius: 15px;
+    border-bottom-right-radius: 35px;
+    margin: 1rem;
+}
 .pet-image {
     position: relative;
     height: 250px;
@@ -71,12 +180,12 @@ footer a {
 
 .pet-state-container {
     position: absolute;
+    margin: 5px;
     top: 0;
     right: 0;
 }
 
 .actions {
-    background-color: rgb(200, 200, 200);
     position: relative;
     padding: 0.5rem;
 }
@@ -87,11 +196,10 @@ footer a {
 
 .button-container.active {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
     text-align: center;
-    margin-top: 0.5rem;
+    margin-top: 2rem;
 }
 
 .button-container.active button {
@@ -148,3 +256,15 @@ footer a {
     width: 100px;
     margin-left: 0.25rem;
 }
+
+.test{
+    height: 64px;
+    width: 64px;
+    background-image: url('C:/Users/natha/Desktop/aptitude.gif');
+  }
+
+
+.test:hover{
+    background-image: url('C:/Users/natha/Desktop/aptitude.gif');
+    background-size: cover;
+  }
